--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 id="centr">EIXEREM AVANT</h1>
     </header>
     <main>
-        <p><img class="tam" src="/images/coches-dana.jpg" alt="Dana1"> <img class="tam" src="/images/Efectos-DANA-Valencia.jpg" alt="dana2"> <img class="tam" src="/images/fotografo-sergio-garcia-carrasco-previsiones-20m-tema-especial-dana-valencia-paiporta-16.webp" alt="dana3"> </p>
+        <p><img class="tam" src="images/coches-dana.jpg" alt="Dana1"> <img class="tam" src="images/Efectos-DANA-Valencia.jpg" alt="dana2"> <img class="tam" src="images/fotografo-sergio-garcia-carrasco-previsiones-20m-tema-especial-dana-valencia-paiporta-16.webp" alt="dana3"> </p>
     <p class="mod">Nunca pierdas la esperanza. Las tormentas hacen a la gente más fuerte y nunca duran para siempre.</p>
     </main>
 </body>
